adds some metadata

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<html>
+<!doctype html>
+
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+
+        <title>Demo Transcribe</title>
+        <meta name="description" content="Demo project to transcribe the speech">
+        <meta name="author" content="Rahul Gupta">
         <script src="https://kit.fontawesome.com/c8f8f11fed.js" crossorigin="anonymous"></script>
     </head>
     <body>
